--- a/rest-api-node/assets/bower.json
+++ b/rest-api-node/assets/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning",
+  "name": "assets",
   "homepage": "https://github.com/zeckdude/learning",
   "authors": [
     "Chris Seckler <chrisseckler@gmail.com>"
@@ -13,5 +13,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "^3.1.1"
+  }
 }
