--- a/rest-api-node/package.json
+++ b/rest-api-node/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "i": "^0.3.5"
+    "i": "^0.3.5",
+    "nunjucks": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
