--- a/rest-api-node/package.json
+++ b/rest-api-node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js nodemon --watch app --watch assets --watch views"
+    "dev": "nodemon --debug server.js nodemon --watch app --watch assets --watch views"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,8 @@
     "nunjucks": "^3.0.0"
   },
   "devDependencies": {
+    "debug": "^2.6.0",
+    "morgan": "^1.7.0",
     "nodemon": "^1.11.0"
   }
 }
