--- a/javascript/react-native/udemy-maximilian-schwarzmuller-react-native/projects/rn-course/package.json
+++ b/javascript/react-native/udemy-maximilian-schwarzmuller-react-native/projects/rn-course/package.json
@@ -19,6 +19,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "immutability-helper": "^2.6.6",
     "react": "16.2.0",
     "react-native": "0.52.0"
   }
